src/index.css
@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: "Lexend Deca", sans-serif;
  line-height: 1.5;
  font-weight: 300;

  color-scheme: light dark;
  color: #292929;
  background-color: white;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

/* Homepage */
.homepagebox {
  margin-bottom: 3rem;
}
.homepagetop {
  position: relative;
  margin: 3rem 3rem 0 3rem;
  
background-image: url("https://res.allmacwallpaper.com/get/iMac-27-inch-4K-Retina-wallpapers/Plants-at-a-botanical-gar-5120x2880/18443-12.jpg");
/*  background: url("https://img.freepik.com/free-photo/green-leaf-texture-leaf-texture-background_501050-120.jpg?w=1800&t=st=1693825811~exp=1693826411~hmac=7356ae2042890af0f835fa11bc383714336bd24774dd655ca12d96592903d034")
    rgb(0, 63, 52);*/
  background-size: cover;
  background-position: center;
  /* background-blend-mode: soft-light; */

  height: 85vh;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 5%;
}
.homepage-background-color {
  background: rgba(0, 40, 25, 0.626);
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.background-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url("https://res.allmacwallpaper.com/get/iMac-27-inch-4K-Retina-wallpapers/Plants-at-a-botanical-gar-5120x2880/18443-12.jpg");
  background-size: cover;
  background-position: center;
  filter: blur(5px); /* Add the blur effect here */
  opacity: 1; /* Adjust opacity as desired */
  z-index: -1; /* Place it behind the content */
  border-radius: 5px;
}
.homepagetop h1 {
  font-size: 250px;
  line-height: 1.1;
}

.homepagetop.scroll-active {
  filter: blur(1px); /* Example: Applying a blur effect */
}

.info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0px;
  background-color: #f5f5f5;
  border-radius: 20px;
  text-align: center;
  max-width: 97%;
  margin: 0 auto;
  position: relative;
  overflow: hidden;
  height: 300px;
  margin-bottom: 20px;
}
/*card in homepage*/
.ca-container {
  display: flex;
  justify-content: center;
  overflow-x: auto; /* Add horizontal scroll if necessary */
  margin: 1.875rem 0; /* Adjust the top and bottom margin as needed */
}
.cards__container {
  display: flex; /* Use flexbox to align items horizontally */
  justify-content: flex-start; /* Align items to the left */
  margin: 1.875rem 0; /* Adjust the top and bottom margin as needed */
  max-width: 100%; /* Allow the container to take full width */
  overflow-x: scroll; /* Add horizontal scroll if necessary */
  padding: 0 1rem; /* Add some horizontal padding if needed */
  gap: 3.75rem;
  flex-wrap: nowrap; /* Prevent wrapping of cards */
}

.text-container-home {
  display: flex;
  margin-right: 1rem;
  width: 450px;
  justify-content: center;
  align-items: center;
  text-align: center;
  /* Add some space between the card and text */
}

.text-container-home h1 {
  font-size: 24px; /* Adjust font size as needed */
  margin: 0; /* Remove any margin */
}

.card {
  display: grid;
  grid-template-columns: 1fr;
  width: 100%;
  margin: 30px;
}

.card__thumb {
  overflow: hidden;
  background-color: #6a6a6a;
  border-radius: 20px;
  height: 300px;
  width: 400px;
}

.card__thumb img {
  transition: all 0.3s ease;
  border-radius: 20px;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.card__thumb:hover img {
  transform: scale(1.1);
  border-radius: 20px;
}

.card__content {
  background-color: white;
  padding: 2.1875rem 1.25rem 3.4375rem;
  position: relative;
  text-align: center;
  border-radius: 20px;
}

.card__title {
  color: #171717;
  font-family: "Playfair Display", serif;
  font-size: 2.1875rem;
  font-weight: 600;
  margin-bottom: 1.25rem;
}

.card__btn {
  background: #64a36e00;
  border: none;
  bottom: -1.25rem;
  left: 50%;
  padding: 0.625rem;
  position: absolute;
  transform: translateX(-50%);
  transition: all 0.3s ease;
}

.card__btn:hover,
.card__btn:focus {
  background-color: #64a36e8e;
}

.card__btn img {
  width: 1.25rem;
}

/* Media Queries */

@media (min-width: 37.5rem) {
  .card {
    grid-template-columns: auto minmax(6.25rem, 25rem) auto;
    grid-template-rows: repeat(4, auto);
  }

  .card__thumb {
    width: 100%;
    max-width: 34.375rem;
    justify-self: center;
    grid-area: 1 / 1 / -2 / -1;
  }

  .card__content {
    grid-area: 3 / 2 / -1 / -2;
    padding: 2.8125rem 2.8125rem 3.4375rem;
  }
}

@media (min-width: 56.25rem) {
  .card {
    grid-template-columns: auto 4.375rem minmax(6.25rem, 25rem);
    grid-template-rows: repeat(3, auto);
  }

  .card:nth-child(even) {
    grid-template-columns: minmax(6.25rem, 25rem) 4.375rem auto;
  }

  .card__thumb {
    grid-area: 1 / 1 / -1 / 3;
  }

  .card:nth-child(even) .card__thumb {
    grid-area: 1 / 2 / -1 / -1;
  }

  .card__content {
    grid-area: 2 / 2 / -2 / -1;
    text-align: left;
  }

  .card:nth-child(even) .card__content {
    text-align: left;
    grid-area: 2 / 1 / -2 / 3;
  }
}

/* Adjust the margin-top to bring the info closer to the carousel */
.info-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  border-radius: 20px;
  margin-top: -20px; /* Reduce the margin to bring it closer to the carousel */
}

.info-step {
  text-align: center;
  flex: 1;
  max-width: 550px;
  margin: 20px;
}

.info-step h3 {
  font-size: 2.9rem;
  margin: 10px 0;
  margin-right: 100px;
  font-weight: 600;
}

.info-step p {
  font-size: 1rem;
  margin-right: 100px;
}

/* Additional CSS for the process section */
.process-container {
  text-align: center;
  max-width: 97%;
  margin: 0 auto;
  padding: 40px;
  position: relative; /* Add this to establish a stacking context */
  overflow: hidden; /* Hide any overflowing content */
  margin-bottom: 20px;
}

.process {
  padding: 0px;
  background-color: #f5f5f5;
  border-radius: 20px;
  text-align: center;
  max-width: 97%;
  margin: 0 auto;
  padding: 30px;
  position: relative; /* Add this to establish a stacking context */
  overflow: hidden; /* Hide any overflowing content */
}
.process h2 {
  font-size: 2rem;
  margin: 10px 0;
  font-weight: 600;
}

.process-section {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  border-radius: 20px;
}

.process-step {
  text-align: center;
  flex: 1;
  max-width: 250px;
  margin: 20px;
}

.process-step img {
  width: 100px;
  height: 100px;
  margin: 0 auto;
  display: block;
}

.process-step h3 {
  font-size: 1.5rem;
  margin: 10px 0;
  font-weight: 600;
}

.process-step p {
  font-size: 1rem;
}

/*About Page*/
.about-page:before {
  content: "";
  position: fixed;
  left: 0;
  right: 0;
  z-index: -1;
  display: block;
  background-image: url("https://cdn.wallpapersafari.com/87/96/0eYsrX.jpg");
  width: 100%;
  height: 100vh;
  background-size: cover;
  -webkit-filter: blur(10px);
  -moz-filter: blur(10px);
  -o-filter: blur(10px);
  -ms-filter: blur(10px);
  filter: blur(10px);
}

.about-page {
  position: relative;
  height: 99vh;
  overflow: hidden;
  margin-top: -80px;
}

.about-page h1 {
  font-size: 4.5em;
  max-width: 90rem; /* Use max-width instead of width */
  margin: 0 auto; /* Center the element horizontally */
  padding-top: 9rem;
  padding-bottom: 2rem;
  line-height: 1.1;
  text-align: center;
  font-weight: 400;
}
.image-hover:hover {
  transform: scale(1.1); /* Increase the scale on hover (adjust as needed) */
  transition: transform 0.2s ease; /* Add a smooth transition */
}

.text-container {
  width: 80%; /* Set a maximum width as needed */
  margin: 0 auto; /* Center-align the text container */
  /* Add some padding for spacing */
  /* Add any other styling you want for the text container */
}
.card-container {
  max-width: 1000px; /* Adjust the maximum width as needed */
  width: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  box-shadow: #d60c0c 1000px;
}
.home-page-text {
  justify-content: center;
  align-items: center;
}
.card-container h1 {
  justify-content: center;
  align-items: center;
  text-align: center;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

/* Add Plant page */

.add-plant-page:before {
  content: "";
  position: fixed;
  left: 0;
  right: 0;
  z-index: -1;

  display: block;
  background-image: url("https://img.freepik.com/free-photo/angel-vine-plant-light-gray-background_53876-133194.jpg?w=2000&t=st=1693818872~exp=1693819472~hmac=35d740e7cc9abe76665d96d07e6b2831f7d3f91dc634a6de222ad5048f294276");
  width: 100%;
  height: 100vh;
  background-size: cover;

  -webkit-filter: blur(10px);
  -moz-filter: blur(10px);
  -o-filter: blur(10px);
  -ms-filter: blur(10px);
  filter: blur(10px);
}

.add-plant-page {
  position: relative;
  height: 99vh;
  margin-top: -80px;
}

.add-plant-page h1 {
  font-size: 4.5em;
  width: 37rem;
  margin-left: 5rem;
  padding-top: 13rem;
  padding-bottom: 2rem;
  line-height: 1.1;
  text-align: left;
  font-weight: 400;
}

.add-plant-buttons {
  padding-top: 3rem;
  margin-left: 5rem;
  width: 20rem;
  display: flex;
  justify-content: space-between;
}

.add-plant-page p {
  font-size: 1.5em;
  width: 50rem;
  text-align: left;
  margin-left: 5rem;
  line-height: 1.1;
  font-weight: 200;
}

.noise-texture {
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px; 
  top: 0px;
  width: 100%;
  height: 100%;
  background-image: url("https://res.cloudinary.com/foundfoliage/image/upload/v1693820460/vnrcmkqoigwujljdgleg.jpg");
  background-size: 300px 300px;
  background-attachment: scroll;
  opacity: 0.4;
  z-index: -1;
} 

.add-page-img {
  position: fixed;
  bottom: 0px;
  left: 57vw;
  width: 70vh;
  z-index: 0;
  filter: contrast(150%);
}

.garden-text-container {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: flex-start;
  justify-content: flex-start;
  margin-bottom: 1rem;
}

.garden-text-container h1 {
  font-size: 4.5rem;
  margin: 1rem 0;
  margin-right: 10rem;
  font-weight: 900;
}

.darkened-background {
  opacity: 0.5;
  z-index: 1000;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: #171717;
  margin: 0;
}

.loading-spinner {
  z-index: 1001;
  color: white;
}

.details-image {
  object-fit: cover;
  width: 23rem;
  height: 23rem;
}

